--- a/Index.html
+++ b/Index.html
@@ -55,11 +55,11 @@
      <p> Happy Valentine's Day to a sweet daughter/son! I love you so much. Sending you a big Valentine's Day hug. Happy Valentine's Day! Remember not to eat too much candy—you're sweet enough already. You make me laugh and smile every day. I love you! Hope your day is filled with chocolate, sweet treats, and so much love. Wishing a special Valentine's Day to a very special kid! </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (7).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/VBjFzTB/download-7.jpg" alt=""> 
      <p> You’re the highlight of my day! You’re sew special to me. I love you sew much! Wool you be mine, Valentine? I wool always love yew. You color my world. I think you are just write, Valentine. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (8).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/VBjFzTB/download-8.jpg" alt=""> 
      <p> You rock. I love you so moss. Tell me you beleaf in love, Valentine. You are tree-mendous. There's so mushroom in my heart for you. Aloe you vera much. This Valentine's Day doesn't succ, thanks to you. </p> 
     </div> 
    </div> 
