--- a/Index.html
+++ b/Index.html
@@ -27,35 +27,35 @@
   <div class="container "> 
    <div class="row"> 
     <div class="col-sm-4 col-md-4 img card"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download.jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/Gsbjvsz/download.jpg" alt=""> 
      <p> Happy Valentine’s Day to the most special person in my life. I love you more than pizza. You're my everything. Happy Valentine's Day! "In case you ever foolishly forget: I am never not thinking about you." —Virginia Woolf Are you a banana? Because I find you a-peel-ing. Happy Valentine's Day, handsome. Valentine, you take my breath away, every single day. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (1).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/s5g7WHR/download-1.jpg" alt=""> 
      <p> Know why I have a library card? Because I’m checkin’ you out. Happy Valentine’s Day to the most beautiful woman I know. "Love is friendship that has caught on fire." —Ann Landers I love you, and I love us. Every love song is about you. Happy Valentine's Day! Happy Valentine's Day to the most important woman in my life. I never liked Valentine's Day, and then I met you and I understood what it was all about. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (2).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/kBK5Zwj/download-2.jpg" alt=""> 
      <p> Thank you for bringing so much love, joy, and adventure into my life. I love you. You still make me laugh. You still give me butterflies. And I'm still falling for you every single day. Happy Valentine's Day! Through all the seasons, through all of time... I love you. Happy Valentine's Day. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (3).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/cQXV5Kt/download-3.jpg" alt=""> 
      <p> "Loving is not just looking at each other, it’s looking in the same direction." —Antoine de Saint-Exupéry When we met, I knew I wanted to spend every single Valentine's Day with you. You're my rock and I don't know what I'd do without you. Happy Valentine's Day! To my hubby on this Valentine's Day, I'm yours forever. To another Valentine's Day spent with the love of my life, and to many more. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (4).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/sHDHbVR/download-4.jpg" alt=""> 
      <p> I love you more than you'll ever know. Happy Valentine's Day! I would choose you again and again. Happy Valentine's Day to the woman of my dreams. You're the reason I am who I am today. Thank you for everything you do for our family. Happy Valentine's Day, my love! You are my best friend, my partner, and my soulmate. I love you. What would I do without you by my side? Happy Valentine's Day to the love of my life. To the most amazing woman who I am lucky enough to call my wife, Happy Valentine's Day. Every day I wake up next to you feels like Valentine's Day. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (5).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/b50n4P3/download-5.jpg" alt=""> 
      <p> You're my best friend and my partner in crime. Thank you so much for being you. I love you, friend, and there's nothing I wouldn't do for you. Happy Valentine's Day! Thank you for standing by my side through thick and thin, my forever friend. I can't think of anyone to whom I'd rather be toasting on Valentine's Day than a friend like you. I love you; Happy Valentine's Day! Wishing you a beautiful day filled with all the love and happiness you deserve. To my best friend this Valentine's Day, I couldn't ask for someone who loves and supports me more than you do. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="./img/download (6).jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/PwMPSNH/download-6.jpg" alt=""> 
      <p> Happy Valentine's Day to a sweet daughter/son! I love you so much. Sending you a big Valentine's Day hug. Happy Valentine's Day! Remember not to eat too much candy—you're sweet enough already. You make me laugh and smile every day. I love you! Hope your day is filled with chocolate, sweet treats, and so much love. Wishing a special Valentine's Day to a very special kid! </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
-     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/VBjFzTB/download-7.jpg" alt=""> 
+     <img style="width: 80%; height: 200px;" class="card-img-top" src="https://i.ibb.co/gWdNPbn/download-7.jpg" alt=""> 
      <p> You’re the highlight of my day! You’re sew special to me. I love you sew much! Wool you be mine, Valentine? I wool always love yew. You color my world. I think you are just write, Valentine. </p> 
     </div> 
     <div class="col-sm-4 col-md-4 card img"> 
