--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Happy Valetine For Coder</title> 
+  <title>Happy Valetine Oluwatoyin</title> 
   <link rel="stylesheet" href="index.css"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> 
   <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&amp;display=swap" rel="stylesheet"> 
@@ -15,10 +15,10 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> 
     <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
      <ul class="navbar-nav mr-auto"> 
-      <li class="nav-item active"> <a class="nav-link" href="https://twitter.com/XCodeBoi">Twitter<span class="sr-only">(current)</span></a> </li> 
+      <li class="nav-item active"> <a class="nav-link" href="https://twitter.com/Aotoluwalope">Twitter<span class="sr-only">(current)</span></a> </li> 
       <li class="nav-item "> <a class="nav-link" href="https://www.freecodecamp.org/xcodeboi">freecodecamp</a> </li> 
-      <li class="nav-item "> <a class="nav-link" href="https://github.com/Winnercoz">GitHub Profile</a> </li> 
-      <li class="nav-item "> <a class="nav-link" href="https://web.facebook.com/winnercoz340"> </a> </li> 
+      <li class="nav-item "> <a class="nav-link" href="https://github.com/Aotoluwalope">GitHub Profile</a> </li> 
+      <li class="nav-item "> <a class="nav-link" href="https://web.facebook.com/Aotoluwalope"> </a> </li> 
      </ul> 
     </div> 
    </nav> 
