--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
  <body> 
   <nav> 
    <nav class="navbar navbar-expand-lg navbar-light bg-danger"> 
-    <a class="navbar-brand" href="https://twitter.com/XCodeBoi" id="logo">XCodeBoi</a> 
+    <a class="navbar-brand" href="https://twitter.com/Aotoluwalope" id="logo">OLUWATOYIN</a> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> 
     <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
      <ul class="navbar-nav mr-auto"> 
