--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,7 @@
     </div> 
    </div> 
   </div> 
-  <button class="btn btn-primary btn-lg btn-block" onclick="window.location = 'https://twitter.com/XCodeBoi'"> Please Let Connect On Twitter </button> 
+  <button class="btn btn-primary btn-lg btn-block" onclick="window.location = 'https://twitter.com/Aotoluwalope'"> Please Let Connect On Twitter </button> 
   <footer> 
   </footer> 
  </body>
